[package]
name = "fsbench"
version = "0.1.2"
authors = ["Ankit Bhardwaj <bhrdwj.ankit@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
autobenches = false

[[bench]]
name = "fxmark"
path = "src/fxmark.rs"
harness = false

[profile.bench]
debug = true

[dev-dependencies]
hwloc2 = "2.2"
num_cpus = "1.12"
x86 = "0.34.0"
core_affinity = "0.5.10"
serde = { version = "1", features = ["derive"] }
clap = { version = "2", features = ["yaml"] }
libc = "0.2.69"
nix = "0.17.0"
